# robot_subagent

./: .env.example  .gitignore  Makefile  README.md  package.json  pyproject.toml  tsconfig.json
config/: skill_registry.yaml
robot_agent/: __init__.py  agent.py  cli.py  ollama_robot_trace_client.py  ollama_test_client.py  openvla_client.py  prompts.py  safety.py  schemas.py  skills.py  system_metrics.py  task_trace.py  tui.py
scripts/: setup.sh
src/ink/: app.tsx  pythonBridge.ts  types.ts
src/ink/components/: ChatLog.tsx  CommandInput.tsx  SkillList.tsx  StatusBar.tsx
tests/: test_smoke.py
