[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "robot-subagent"
version = "0.1.0"
description = "CLI robot command sub-agent for OpenVLA / LeRobot"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "horio.shuhei98" }]
license = { text = "MIT" }
dependencies = [
    "openai-agents>=0.0.5",
    "typer>=0.12",
    "rich>=13.7",
    "textual>=0.50",
    "pydantic>=2.6",
    "PyYAML>=6.0",
    "httpx>=0.27",
    "python-dotenv>=1.0",
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
]

[project.scripts]
robot-agent = "robot_agent.cli:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["robot_agent*"]

[tool.ruff]
line-length = 100
target-version = "py311"
